--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -474,110 +474,4 @@
     </section>
 </div>
 
-<button id="toggle-dark-mode">Toggle Dark Mode</button>
 
-<script>
-    const toggleDarkModeButton = document.getElementById('toggle-dark-mode');
-    toggleDarkModeButton.addEventListener('click', () => {
-        document.body.classList.toggle('dark-mode');
-    });
-</script>
-
-</body>
-</html>
-/* Global styles */
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-    margin: 0;
-    padding: 0;
-    transition: background-color 0.3s, color 0.3s;
-}
-
-/* Dark mode styles */
-body.dark-mode {
-    background-color: #121212;
-    color: #e0e0e0;
-}
-
-button {
-    position: fixed;
-    top: 20px;
-    right: 20px;
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s, color 0.3s;
-}
-
-button:hover {
-    background-color: #0056b3;
-}
-
-/* Education section styles */
-.education-section {
-    background: linear-gradient(to right, #a8e063, #56ab2f); /* New gradient background */
-    margin: 20px;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-.education-section h2 {
-    text-align: center;
-    color: #333;
-    font-size: 2em; /* Increased font size */
-    font-weight: bold; /* Made bold */
-    margin-bottom: 20px; /* Added margin bottom for spacing */
-}
-
-.education-subsection {
-    margin-bottom: 30px; /* Increased margin bottom for better separation */
-}
-
-.education-subsection h3 {
-    color: #ff5733; /* Changed color */
-    font-size: 1.5em; /* Increased font size */
-    font-weight: bold; /* Made bold */
-    margin-bottom: 10px;
-}
-
-.education-subsection p {
-    color: #555;
-    line-height: 1.6;
-    margin-bottom: 0.5em; /* Adjusted margin bottom for paragraph spacing */
-}
-
-.education-details {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around; /* Improved layout with flexbox */
-}
-
-.video-container {
-    width: 100%;
-    max-width: 300px;
-    margin: 0 auto;
-    text-align: center;
-}
-
-/* Dark mode specific styles */
-body.dark-mode .education-section {
-    background: linear-gradient(to right, #3a3a3a, #121212);
-}
-
-body.dark-mode h2, body.dark-mode h3 {
-    color: #e0e0e0;
-}
-
-body.dark-mode button {
-    background-color: #333;
-    color: #e0e0e0;
-}
-
-body.dark-mode button:hover {
-    background-color: #555;
-}
